--- a/layout.css
+++ b/layout.css
@@ -3,6 +3,7 @@
   display: block;
   max-width: 100%;
   height: auto;
+  overflow: hidden;
 }
 .row { 
  /* comment out if row is not in a container*/
@@ -38,6 +39,13 @@
 .container-fluid:after,
 .row:after{
   clear: both;
+}
+
+.pull-right {
+  float: right !important;
+}
+.pull-left {
+  float: left !important;
 }
 
 @media (min-width: 768px) {
@@ -97,6 +105,24 @@
 .col-xs-offset-2 { margin-left: 16.66666667%;}
 .col-xs-offset-1 { margin-left: 8.33333333%;}
 .col-xs-offset-0 { margin-left: 0;}
+
+@media (max-width: 767px){
+    .col-xs-pull-5 {
+    right: 41.66666667%;
+  }
+    .col-xs-pull-4 {
+      right: 33%;
+    }
+    .col-xs-pull-1{
+      right: 8.33%:;
+    }
+    .col-xs-pull-2{
+      right: 16.66%;
+    }
+    .col-xs-pull-custom {
+      right: 4.5%;
+    }
+}
 
 
 
@@ -178,6 +204,21 @@
   .col-md-offset-2 { margin-left: 16.66666667%;}
   .col-md-offset-1 { margin-left: 8.33333333%;}
   .col-md-offset-0 { margin-left: 0;}
+
+
+   .col-md-pull-6 {
+    right: 50%;
+  }
+  .col-md-pull-5 {
+    right: 41.66666667%;
+  }
+   .col-md-pull-4 {
+    right: 33.33333333%;
+  }
+
+  .col-md-pull-custom{
+    right: 25%;
+  }
 }
 
 
@@ -217,4 +258,13 @@
   .col-sm-offset-2 { margin-left: 16.66666667%;}
   .col-sm-offset-1 { margin-left: 8.33333333%;}
   .col-sm-offset-0 { margin-left: 0;}
+
+    .col-sm-pull-4 { right: 41.66666667%;}
+    .col-sm-pull-6 { right: 50%;}
+    .col-sm-pull-3 { right: 25%;}
+
+    /* custom */
+
+    .col-sm-pull-custom { right: 4%; }
+
 }
