--- a/main-content.css
+++ b/main-content.css
@@ -104,7 +104,7 @@
 }
 .tag {
 	background-color: var(--blue);
-	font-size: 1.5em;
+	font-size: 1.3em;
 	color: white;
 	padding: 0.4em;
 	width: 40%;
@@ -119,24 +119,50 @@
 	}
 }
 
+@media(max-width: 660px){
+	.tag{
+		width: 50%;
+	}
+	.tag span {
+	    padding: 0 10px 0px 30%;
+	}
+}
+@media(max-width: 530px){
+    .tag{
+    	width: 60%;
+    }
+}
+@media(max-width: 450px){
+	.clients-say hr {
+		display: none;
+	}
+    .tag{
+    	width: 70%;
+    }
+	.tag span {
+	    padding: 0 10px 0px 10%;
+	}
+}
+
 /*testimonials*/
 
 .clients-say .row {
 	margin-top: 40px;
+	margin: 40px 0px;
 }
 .clients-say .more a{
 	color: var(--blue);
-	line-height: 100%;
-}
+	line-height: 25px;}
+
 .clients-say .more img {
 	background-color: var(--blue);
-	padding: 5px;
+	padding: 5px 5px;
+	width: 25px;
+	height: 25px;
 }
-
-.client-info img {
-
+.client {
+	margin-bottom: 30px;
 }
-
 .client-quote {
 	text-align: center;
 	background-color: #f3f3f3; /*very light gray*/
@@ -144,6 +170,71 @@
 	border-color: #e1e1e1;
 	border-radius: 3px;
 }
-quote:before {
-	
+q {
+  quotes: "“" "”" "‘" "’";
+}
+q:before {
+    content: open-quote;
+    color: #c3c3c3;
+    font-family: "Liberation Sans Bold";
+    font-size: 3em;
+    float: left;
+    margin: -2px 5px 0px 5px;
+}
+q:after {
+    
+    content: close-quote;
+    color: #c3c3c3;
+    font-family: "Liberation Sans Bold";
+    font-size: 3em;
+    display: inline;
+    float: right;
+    margin: -30px 5px 0px 5px;
+
+} 
+q span{
+	display: inline-block;
+	margin-top: -20px;
+	margin: -20px 10px 20px 10px;
+}
+
+.client-info {
+	margin-top: 10px;
+}
+.client-info .rounded-img {
+	float: left;
+	margin-right: 5px;
+}
+.stars {
+	display: inline-block;
+	float: right;
+	margin-right: -30px;
+	margin-top: 12px;
+}
+.client-info p {
+	float: left;
+	line-height: 50px;
+}
+span.bold {
+	font-family: "Liberation Sans Bold";
+	padding: 0 5px;
+}
+
+.more img {
+	float: right;
+	padding: 2px 4px;
+}
+
+
+/* video */
+.video-desc {
+	text-align: justify;
+	margin-top: 10px;
+}
+.video-desc h4 {
+	margin-bottom: 10px;
+}
+iframe {
+	width: 100%;
+	height: 300px;
 }
